--- a/springboot-mongodb/docker-compose.yml
+++ b/springboot-mongodb/docker-compose.yml
@@ -1,15 +1,28 @@
 version: "3"
+
 services:
-  mymongodb:
-    image: mongo:latest
-    container_name: "mymongodb"
-    ports:
-     - 27017:27017
   springboot-mongodb:
-    image: naresh240/springboot-mongodb:1.0
-    container_name: springboot-mongodb
+    image: naresh240/springboot-mongodb:latest
     ports:
       - 8080:8080
-    links:
-      - mymongodb  
-
+    networks:
+      - springboot
+    depends_on:
+      - mymongodb
+    deploy:
+      replicas: 2
+      update_config:
+        parallelism: 2
+      restart_policy:
+        condition: on-failure
+  mymongodb:
+    image: mongo:latest
+    ports:
+      - 27017:27017
+    networks:
+      - springboot
+    deploy:
+      placement:
+        constraints: [node.role == manager]
+networks:
+  springboot:
